--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -25,3 +25,5 @@ jobs:
           npm install
           npm run build
           npm run test:prod
+      - name: Coverage Summary
+        run: cat coverage/lcov.info | npx coveralls
