--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "CI=false && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:prod": "ng test --browsers ChromeHeadless --single-run"
+    "test:prod": "ng test --browsers=ChromeHeadless --watch=false --progress=false --code-coverage"
   },
   "private": true,
   "dependencies": {
