--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -19,9 +19,11 @@ jobs:
         with:
           node-version: '20.x' # Altere para a versão do Node.js que seu projeto utiliza
       # Rodando a action manualmente
-      - name: run install, build and test
+      - name: run install, build
         # Rodando os comandos npm install, npm run build e npm run test
         run: |
           npm install
           npm run build
-          npm run test:prod
+      - name: run tests
+        # Rodando o comando npm run test
+        run: npm run test:prod
