--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,7 +1,11 @@
 name: ci-angular-workflow-dev
 
 # Especifica quando o fluxo de trabalho deve ser executado
-on: [pull_request, push]
+on:
+  pull_request:
+    branches:
+      - develop
+      - main
 
 # Define as etapas que compõem o fluxo de trabalho
 jobs:
@@ -17,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         # Passando argumentos para a action
         with:
-          node-version: '20.x' # Altere para a versão do Node.js que seu projeto utiliza
+          node-version: "20.x" # Altere para a versão do Node.js que seu projeto utiliza
       # Rodando a action manualmente
       - name: run install, build
         # Rodando os comandos npm install, npm run build e npm run test
