--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -31,3 +31,7 @@ jobs:
       - name: run tests
         # Rodando o comando npm run test
         run: npm run test:prod
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
