--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -31,3 +31,8 @@ jobs:
       - name: run tests
         # Rodando o comando npm run test
         run: npm run test:prod
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
