--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "ng serve",
     "build": "CI=false && ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test:prod": "ng test --browsers=ChromeHeadless --watch=false --progress=false --code-coverage"
+    "test": "ng test --browsers=ChromeHeadless --watch=false --progress=true --code-coverage=true",
+    "test:prod": "ng test --browsers=ChromeHeadless --watch=false --progress=false --code-coverage=true",
+    "sonar": "sonar-scanner"
+
   },
   "private": true,
   "dependencies": {
@@ -25,6 +27,7 @@
     "password-checker-validator": "^1.1.0",
     "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
+    "sonar-scanner": "^3.1.0",
     "tslib": "^2.3.0",
     "validar-telefone": "^0.1.0",
     "zone.js": "~0.14.3"
