--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: run tests
+      - name: run tests and coverage
         # Rodando o comando npm run test
         run: npm run test:prod
       - name: SonarCloud Scan
