--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,4 +35,4 @@ sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 
 # Caminho para o relatório de cobertura de código LCOV gerado pelo TypeScript
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
