--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "start": "ng serve",
     "build": "CI=false && ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers=ChromeHeadless --watch=false --progress=true --code-coverage=true",
+    "test": "ng test --browsers=ChromeHeadless --watch=false --karma-config=karma.conf.js   --progress=true --code-coverage=true",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --progress=false --code-coverage=true",
     "sonar": "sonar-scanner"
-
   },
   "private": true,
   "dependencies": {
