--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,13 +23,13 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 
 # Diretórios contendo código-fonte
-sonar.sources=src
+sonar.sources=.
 
 # Exclusões de arquivos ou diretórios do escaneamento
 sonar.exclusions=**/node_modules/**
 
 # Diretórios contendo testes
-sonar.tests=src
+sonar.tests=.
 
 # Inclusões de arquivos de teste
 sonar.test.inclusions=**/*.spec.ts
