--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,11 +1,14 @@
 name: ci-angular-workflow-dev
 
 # Especifica quando o fluxo de trabalho deve ser executado
-on:
-  pull_request:
-    branches:
-      - develop
-      - main
+on: [pull_request, push]
+# on:
+#   pull_request:
+#     branches:
+#       - develop
+#       - main
+      
+
 
 
 # Define as etapas que compõem o fluxo de trabalho
