--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
+    "@angular/google-maps": "^17.3.9",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@ngrx/signals": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "cpf-cnpj-validator": "^1.0.3",
+    "date-fns": "^3.6.0",
     "ng-mocks": "^14.12.2",
     "password-checker-validator": "^1.1.0",
     "primeicons": "^7.0.0",
